src/test/c/accept/34-class-inheritance.arcx
class Hijo is Padre {
    valor: int = 10;
} 