src/test/c/reject/21-missing-comma-in-params.arcx
fun = (a: int b: int) {}; 